--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,15 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <android.support.v4.view.ViewPager
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+    <FrameLayout
+            android:id="@+id/main_frame"
             android:layout_weight="1"
-            android:id="@+id/vp"
-    />
+            android:layout_height="0dp"
+            android:layout_width="match_parent"/>
 
     <android.support.design.widget.BottomNavigationView
             android:layout_gravity="bottom"
-            android:id="@+id/bottomNavigationView"
+            android:id="@+id/bottom_navigation_view"
             android:layout_width="match_parent"
             app:itemTextColor="@drawable/bottom_navigation_selector"
             app:itemIconTint="@drawable/bottom_navigation_selector"
