--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,9 @@
             android:layout_width="match_parent"
             app:itemTextColor="@drawable/bottom_navigation_selector"
             app:itemIconTint="@drawable/bottom_navigation_selector"
+            android:layout_marginBottom="4dp"
             app:menu="@menu/navigation"
-            android:layout_height="50dp"
+            android:layout_height="@dimen/tab_height"
             android:layout_alignParentBottom="true"/>
 
 </LinearLayout>
