--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="colorBackgroundColor">#79474043</color>
-    <color name="colorForegroundColor">#FFFFFFFF</color>
+    <color name="colorBackgroundColor">#EEEEEE</color>
+    <color name="colorForegroundColor">#FFFFFF</color>
     <color name="tab_checked">#ED6A2C</color>
     <color name="tab_unchecked">#757575</color>
 </resources>
