--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
+            android:id="@+id/user_title_layout"
             android:background="@color/colorForegroundColor"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -33,7 +34,7 @@
                 android:maxWidth="15dp"
                 app:layout_constraintWidth_max="11dp"
                 android:maxHeight="@dimen/icon_size"
-                android:id="@+id/user_setting"
+                android:id="@+id/menu_setting"
                 android:src="@mipmap/ic_menu"
                 android:layout_width="@dimen/icon_size"
                 android:layout_height="@dimen/icon_size"
@@ -46,12 +47,63 @@
 
     </android.support.constraint.ConstraintLayout>
 
-    <TextView android:layout_width="wrap_content"
-              app:layout_constraintLeft_toLeftOf="parent"
-              app:layout_constraintRight_toRightOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
-              app:layout_constraintBottom_toBottomOf="parent"
-              android:layout_height="wrap_content"
-              android:text="user"/>
+    <android.support.constraint.ConstraintLayout
+            android:layout_marginTop="@dimen/default_margin_top"
+            android:background="@color/colorForegroundColor"
+            app:layout_constraintTop_toBottomOf="@id/user_title_layout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/user_info_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView android:layout_width="wrap_content"
+                  app:layout_constraintLeft_toLeftOf="parent"
+                  app:layout_constraintRight_toRightOf="parent"
+                  app:layout_constraintTop_toTopOf="parent"
+                  app:layout_constraintBottom_toBottomOf="parent"
+                  android:layout_height="wrap_content"
+                  android:text="user_info_layout"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+            android:background="@color/colorForegroundColor"
+            app:layout_constraintTop_toBottomOf="@id/user_info_layout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/grid_menu_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView android:layout_width="wrap_content"
+                  app:layout_constraintLeft_toLeftOf="parent"
+                  app:layout_constraintRight_toRightOf="parent"
+                  app:layout_constraintTop_toTopOf="parent"
+                  app:layout_constraintBottom_toBottomOf="parent"
+                  android:layout_height="wrap_content"
+                  android:text="grid_menu_layout"/>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+            android:layout_marginTop="@dimen/default_margin_top"
+            android:background="@color/colorForegroundColor"
+            app:layout_constraintTop_toBottomOf="@id/grid_menu_layout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:id="@+id/list_menu_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <TextView android:layout_width="wrap_content"
+                  app:layout_constraintLeft_toLeftOf="parent"
+                  app:layout_constraintRight_toRightOf="parent"
+                  app:layout_constraintTop_toTopOf="parent"
+                  app:layout_constraintBottom_toBottomOf="parent"
+                  android:layout_height="wrap_content"
+                  android:text="list_menu_layout"/>
+
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
