--- a/app/src/main/res/values/size.xml
+++ b/app/src/main/res/values/size.xml
@@ -4,4 +4,5 @@
     <dimen name="title_height_size">40dip</dimen>
     <dimen name="icon_size">22dip</dimen>
     <dimen name="tab_height">50dip</dimen>
+    <dimen name="default_margin_top">10dip</dimen>
 </resources>
