--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -9,7 +9,7 @@
 
     <android.support.constraint.ConstraintLayout
             android:id="@+id/user_title_layout"
-            android:background="@color/colorForegroundColor"
+            android:background="@color/colorAccent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
