--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -9,7 +9,7 @@
 
     <android.support.constraint.ConstraintLayout
             android:id="@+id/user_title_layout"
-            android:background="@color/colorAccent"
+            android:background="@color/colorForegroundColor"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -96,13 +96,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <TextView android:layout_width="wrap_content"
-                  app:layout_constraintLeft_toLeftOf="parent"
-                  app:layout_constraintRight_toRightOf="parent"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  android:layout_height="wrap_content"
-                  android:text="list_menu_layout"/>
+        <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:id="@+id/menu_recycler_view"
+                android:layout_height="match_parent"/>
 
     </android.support.constraint.ConstraintLayout>
 
