--- a/app/src/main/res/layout/list_menu_layout.xml
+++ b/app/src/main/res/layout/list_menu_layout.xml
@@ -2,18 +2,19 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:paddingVertical="3dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
     <ImageView
             android:id="@+id/list_menu_icon"
             android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/default_margin_top"
-            android:layout_marginTop="8dp"
+            android:layout_height="@dimen/icon_size"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"/>
 
     <TextView
@@ -22,7 +23,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
 
