--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -97,8 +97,9 @@
             android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
+                android:overScrollMode="never"
                 android:id="@+id/menu_recycler_view"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
     </android.support.constraint.ConstraintLayout>
