添加网格设置

--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -54,6 +54,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/user_info_layout"
+            android:minHeight="40dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -72,17 +73,17 @@
             app:layout_constraintTop_toBottomOf="@id/user_info_layout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="1dp"
             android:id="@+id/grid_menu_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <TextView android:layout_width="wrap_content"
-                  app:layout_constraintLeft_toLeftOf="parent"
-                  app:layout_constraintRight_toRightOf="parent"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  android:layout_height="wrap_content"
-                  android:text="grid_menu_layout"/>
+
+        <android.support.v7.widget.RecyclerView
+                android:overScrollMode="never"
+                android:id="@+id/grid_menu_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
     </android.support.constraint.ConstraintLayout>
 
@@ -98,7 +99,7 @@
 
         <android.support.v7.widget.RecyclerView
                 android:overScrollMode="never"
-                android:id="@+id/menu_recycler_view"
+                android:id="@+id/list_menu_recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
