使用基类打印生命周期

--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -15,8 +15,13 @@
         <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 app:title="setting"
+                app:navigationIcon="@mipmap/ic_back"
+                android:fitsSystemWindows="true"
+                android:minHeight="?attr/actionBarSize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 android:background="@color/colorBackgroundColor"/>
 
     </android.support.design.widget.AppBarLayout>
