--- a/app/src/main/res/layout/list_menu_layout.xml
+++ b/app/src/main/res/layout/list_menu_layout.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:paddingVertical="3dp"
+        android:id="@+id/list_menu_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
