--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -6,12 +6,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView android:layout_width="wrap_content"
-              app:layout_constraintLeft_toLeftOf="parent"
-              app:layout_constraintRight_toRightOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
-              app:layout_constraintBottom_toBottomOf="parent"
-              android:layout_height="wrap_content"
-              android:text="home"/>
+    <android.support.v4.view.ViewPager
+            android:id="@+id/home_viewpager"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+    </android.support.v4.view.ViewPager>
 
 </android.support.constraint.ConstraintLayout>
