--- a/app/src/main/res/layout/discovery_fragment.xml
+++ b/app/src/main/res/layout/discovery_fragment.xml
@@ -6,12 +6,15 @@
         android:background="@color/colorBackgroundColor"
         android:layout_height="match_parent">
 
-    <TextView android:layout_width="wrap_content"
-              app:layout_constraintLeft_toLeftOf="parent"
-              app:layout_constraintRight_toRightOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
-              app:layout_constraintBottom_toBottomOf="parent"
-              android:layout_height="wrap_content"
-              android:text="discovery"/>
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/discovery_recyclerview"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
