--- a/app/src/main/res/layout/activity_device_scan.xml
+++ b/app/src/main/res/layout/activity_device_scan.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".DeviceScanActivity">
+        tools:context=".activity.DeviceScanActivity">
 
     <android.support.constraint.ConstraintLayout
             android:id="@+id/device_scan_title_layout"
