将设置移到Activity中

--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -50,7 +50,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/colorForegroundColor"
             android:layout_marginTop="8dp"
-            android:id="@android:id/list_container"
+            android:id="@+id/preference_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"/>
 
