完善用户信息

--- a/app/src/main/res/layout/list_menu_layout.xml
+++ b/app/src/main/res/layout/list_menu_layout.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:paddingVertical="3dp"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="8dp"
         android:id="@+id/list_menu_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -15,8 +16,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginBottom="8dp"/>
 
     <TextView
             android:id="@+id/list_menu_title"
@@ -39,7 +39,6 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
