--- a/app/src/main/res/layout/activity_device_scan.xml
+++ b/app/src/main/res/layout/activity_device_scan.xml
@@ -7,46 +7,11 @@
         android:layout_height="match_parent"
         tools:context=".activity.DeviceScanActivity">
 
-    <android.support.constraint.ConstraintLayout
-            android:id="@+id/device_scan_title_layout"
-            android:background="@color/colorForegroundColor"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/title_height_size">
-
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:textSize="@dimen/title_size"
-                  android:text="@string/scan_device"
-                  app:layout_constraintEnd_toEndOf="parent"
-                  android:layout_marginEnd="8dp"
-                  app:layout_constraintStart_toStartOf="parent"
-                  android:layout_marginStart="8dp"
-                  android:layout_marginBottom="8dp"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  android:layout_marginTop="8dp"
-                  app:layout_constraintTop_toTopOf="parent"
-                  android:id="@+id/device_scan_title"/>
-
-        <ImageView
-                android:scaleType="fitCenter"
-                android:id="@+id/device_scan_title_btn"
-                android:src="@mipmap/ic_add"
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content"
-                android:paddingRight="8dp"
-                android:paddingVertical="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-    </android.support.constraint.ConstraintLayout>
+    <include android:id="@+id/navigation_header" layout="@layout/navigation_header_layout"/>
 
     <android.support.constraint.ConstraintLayout
             android:background="@color/colorForegroundColor"
-            app:layout_constraintTop_toBottomOf="@id/device_scan_title_layout"
+            app:layout_constraintTop_toBottomOf="@id/navigation_header"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
