--- a/app/src/main/res/layout/grid_menu_layout.xml
+++ b/app/src/main/res/layout/grid_menu_layout.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:paddingVertical="3dp"
+        android:paddingVertical="5dp"
+        android:paddingHorizontal="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -25,8 +26,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
+            android:layout_marginStart="8dp"/>
 
 
 </android.support.constraint.ConstraintLayout>
