--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -7,41 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <android.support.constraint.ConstraintLayout
-            android:id="@+id/user_title_layout"
-            android:background="@color/colorForegroundColor"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/title_height_size">
-
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:textSize="@dimen/title_size"
-                  android:text="@string/mine"
-                  app:layout_constraintEnd_toEndOf="parent"
-                  android:layout_marginEnd="8dp"
-                  app:layout_constraintStart_toStartOf="parent"
-                  android:layout_marginStart="8dp"
-                  android:layout_marginBottom="8dp"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  android:layout_marginTop="8dp"
-                  app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>
-
-        <ImageView
-                android:scaleType="fitCenter"
-                android:id="@+id/menu_setting"
-                android:src="@mipmap/ic_add"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingRight="8dp"
-                android:paddingVertical="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-    </android.support.constraint.ConstraintLayout>
+    <include android:id="@+id/user_title_layout" layout="@layout/navigation_header_layout"/>
 
     <android.support.constraint.ConstraintLayout
             android:layout_marginTop="@dimen/default_margin_top"
@@ -49,18 +15,48 @@
             app:layout_constraintTop_toBottomOf="@id/user_title_layout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            android:paddingVertical="25dp"
             android:id="@+id/user_info_layout"
             android:minHeight="40dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <TextView android:layout_width="wrap_content"
-                  app:layout_constraintLeft_toLeftOf="parent"
-                  app:layout_constraintRight_toRightOf="parent"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  android:layout_height="wrap_content"
-                  android:text="user_info_layout"/>
+        <ImageView
+                android:id="@+id/user_header_icon"
+                android:layout_width="@dimen/header_icon_size"
+                android:layout_height="@dimen/header_icon_size"
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="20dp"/>
+
+        <TextView
+                android:id="@+id/user_header_info"
+                app:layout_constraintLeft_toRightOf="@id/user_header_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="15dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+
+        <ImageView
+                android:id="@+id/list_menu_rta"
+                android:layout_width="@dimen/icon_size"
+                android:layout_height="@dimen/icon_size"
+                android:layout_marginTop="8dp"
+                android:src="@mipmap/ic_right"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"/>
+
 
     </android.support.constraint.ConstraintLayout>
 
