--- a/app/src/main/res/values/size.xml
+++ b/app/src/main/res/values/size.xml
@@ -3,6 +3,7 @@
     <dimen name="title_size">18dip</dimen>
     <dimen name="title_height_size">45dip</dimen>
     <dimen name="icon_size">22dip</dimen>
+    <dimen name="header_icon_size">65dip</dimen>
     <dimen name="tab_height">50dip</dimen>
     <dimen name="default_margin_top">10dip</dimen>
 </resources>
