--- a/app/src/main/res/layout/activity_change_language.xml
+++ b/app/src/main/res/layout/activity_change_language.xml
@@ -5,17 +5,17 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.UserInfoActivity">
+        tools:context=".activity.ChangeLanguageActivity">
 
     <include layout="@layout/navigation_header_layout" android:id="@+id/navigation_header"/>
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+            app:layout_constraintTop_toBottomOf="@id/navigation_header"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/navigation_header"
-            android:text="@string/app_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:id="@+id/language_recyclerview"
+            android:layout_height="0dp"/>
 
 </android.support.constraint.ConstraintLayout>
