--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,21 +3,24 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
+        android:id="@+id/layout_main"
         android:background="#FFF"
         android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.MainActivity">
+        tools:context=".ui.activity.MainActivity">
 
+    <!--主要显示区域-->
     <FrameLayout
-            android:id="@+id/main_frame"
+            android:id="@+id/frame_main"
             android:layout_weight="1"
             android:layout_height="0dp"
             android:layout_width="match_parent"/>
 
+    <!--导航栏-->
     <android.support.design.widget.BottomNavigationView
             android:layout_gravity="bottom"
-            android:id="@+id/bottom_navigation_view"
+            android:id="@+id/bnv_main"
             android:layout_width="match_parent"
             app:itemTextColor="@drawable/bottom_navigation_selector"
             app:itemIconTint="@drawable/bottom_navigation_selector"
