--- a/app/src/main/res/layout/activity_change_language.xml
+++ b/app/src/main/res/layout/activity_change_language.xml
@@ -3,19 +3,22 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/layout_change_language"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.ChangeLanguageActivity">
+        tools:context=".ui.activity.ChangeLanguageActivity">
 
-    <include layout="@layout/navigation_header_layout" android:id="@+id/navigation_header"/>
+    <include layout="@layout/include_top_navigation"
+             android:id="@+id/layout_top_navigation"/>
 
+    <!--所有支持语言列表-->
     <android.support.v7.widget.RecyclerView
-            app:layout_constraintTop_toBottomOf="@id/navigation_header"
+            app:layout_constraintTop_toBottomOf="@id/layout_top_navigation"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
-            android:id="@+id/language_recyclerview"
+            android:id="@+id/rv_language"
             android:layout_height="0dp"/>
 
 </android.support.constraint.ConstraintLayout>
