--- a/app/src/main/res/layout/activity_device_scan.xml
+++ b/app/src/main/res/layout/activity_device_scan.xml
@@ -5,32 +5,34 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.DeviceScanActivity">
+        tools:context=".ui.activity.DeviceScanActivity">
 
-    <include android:id="@+id/navigation_header" layout="@layout/navigation_header_layout"/>
+    <include android:id="@+id/layout_top_navigation" layout="@layout/include_top_navigation"/>
 
+    <!--显示扫描结果-->
     <android.support.constraint.ConstraintLayout
             android:background="@color/colorForegroundColor"
-            app:layout_constraintTop_toBottomOf="@id/navigation_header"
+            app:layout_constraintTop_toBottomOf="@id/layout_top_navigation"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="1dp"
-            android:id="@+id/device_scan_info_layout"
+            android:id="@+id/layout_device_scan_info"
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
-
+        <!--扫描结果-->
         <android.support.v7.widget.RecyclerView
                 android:visibility="invisible"
                 android:overScrollMode="never"
-                android:id="@+id/device_scan_info_recycler_view"
+                android:id="@+id/rv_device_scan_info"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
+        <!--什么都没有的时候显示-->
         <TextView
                 android:textAlignment="center"
-                android:id="@+id/device_scan_info_nothing"
+                android:id="@+id/tv_device_scan_info_nothing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
