--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -2,20 +2,23 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
         android:background="@color/colorBackgroundColor"
+        android:id="@+id/layout_setup"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <include android:id="@+id/navigation_header" layout="@layout/navigation_header_layout"/>
+    <include android:id="@+id/layout_top_navigation"
+             layout="@layout/include_top_navigation"/>
 
+    <!--设置-->
     <FrameLayout
-            app:layout_constraintTop_toBottomOf="@id/navigation_header"
+            app:layout_constraintTop_toBottomOf="@id/layout_top_navigation"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/colorForegroundColor"
             android:layout_marginTop="8dp"
-            android:id="@+id/preference_container"
+            android:id="@+id/frame_setup"
             android:layout_width="match_parent"
             android:layout_height="0dp"/>
 
