--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -3,17 +3,19 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/layout_user_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.UserInfoActivity">
+        tools:context=".ui.activity.UserInfoActivity">
 
-    <include layout="@layout/navigation_header_layout" android:id="@+id/navigation_header"/>
+    <include layout="@layout/include_top_navigation"
+             android:id="@+id/layout_top_navigation"/>
 
     <TextView
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/navigation_header"
+            app:layout_constraintTop_toBottomOf="@id/layout_top_navigation"
             android:text="@string/app_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
