--- a/app/src/main/res/layout/discovery_fragment.xml
+++ b/app/src/main/res/layout/discovery_fragment.xml
@@ -2,19 +2,18 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
         android:background="@color/colorBackgroundColor"
+        android:id="@+id/layout_discovery"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/discovery_recyclerview"
+            android:id="@+id/rv_discovery"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-    </android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent"/>
 
 </android.support.constraint.ConstraintLayout>
