--- a/app/src/main/res/layout/grid_menu_layout.xml
+++ b/app/src/main/res/layout/grid_menu_layout.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/layout_grid_menu"
         android:paddingVertical="5dp"
         android:paddingHorizontal="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     <ImageView
-            android:id="@+id/list_menu_icon"
+            android:id="@+id/iv_icon"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             app:layout_constraintTop_toTopOf="parent"
@@ -19,10 +21,10 @@
             android:layout_marginStart="8dp"/>
 
     <TextView
-            android:id="@+id/list_menu_title"
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/list_menu_icon"
+            app:layout_constraintTop_toBottomOf="@id/iv_icon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
