--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -3,11 +3,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@color/colorBackgroundColor"
+        android:id="@+id/layout_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <android.support.v4.view.ViewPager
-            android:id="@+id/home_viewpager"
+            android:id="@+id/vp_home"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
