--- a/app/src/main/res/layout/language_item_layout.xml
+++ b/app/src/main/res/layout/language_item_layout.xml
@@ -4,12 +4,13 @@
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:paddingVertical="5dp"
         android:paddingHorizontal="8dp"
-        android:id="@+id/language_item_container"
+        android:id="@+id/layout_language_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+    <!--图标-->
     <ImageView
-            android:id="@+id/language_item_icon"
+            android:id="@+id/iv_icon"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             app:layout_constraintTop_toTopOf="parent"
@@ -18,9 +19,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"/>
 
+    <!--标题-->
     <TextView
-            android:id="@+id/language_item_title"
-            app:layout_constraintLeft_toRightOf="@id/language_item_icon"
+            android:id="@+id/tv_title"
+            app:layout_constraintLeft_toRightOf="@id/iv_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -29,9 +31,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-
+    <!--更多-->
     <ImageView
-            android:id="@+id/language_item_icon_ok"
+            android:id="@+id/iv_rta"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_marginTop="8dp"
