--- a/app/src/main/res/layout/list_menu_layout.xml
+++ b/app/src/main/res/layout/list_menu_layout.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:paddingVertical="5dp"
         android:paddingHorizontal="8dp"
-        android:id="@+id/list_menu_container"
+        android:id="@+id/layout_grid_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+    <!--列表图标-->
     <ImageView
-            android:id="@+id/list_menu_icon"
+            android:id="@+id/iv_icon"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             app:layout_constraintTop_toTopOf="parent"
@@ -18,9 +20,10 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"/>
 
+    <!--标题-->
     <TextView
-            android:id="@+id/list_menu_title"
-            app:layout_constraintLeft_toRightOf="@id/list_menu_icon"
+            android:id="@+id/tv_title"
+            app:layout_constraintLeft_toRightOf="@id/iv_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -29,9 +32,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-
+    <!--更多-->
     <ImageView
-            android:id="@+id/list_menu_rta"
+            android:id="@+id/iv_rta"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             android:layout_marginTop="8dp"
