--- a/app/src/main/res/layout/loading_layout.xml
+++ b/app/src/main/res/layout/loading_layout.xml
@@ -2,22 +2,24 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
         android:background="@color/colorTransparentBackgroundColor"
+        android:id="@+id/layout_loading"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <ProgressBar
+            android:id="@+id/pb_loading"
             android:paddingVertical="5dp"
             android:paddingHorizontal="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
