--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -7,22 +7,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <include android:id="@+id/user_title_layout" layout="@layout/navigation_header_layout"/>
+    <include android:id="@+id/include_top_navigation"
+             layout="@layout/include_top_navigation"/>
 
+    <!--用户信息栏：主要显示用户头像、信息、更多-->
     <android.support.constraint.ConstraintLayout
             android:layout_marginTop="@dimen/default_margin_top"
             android:background="@color/colorForegroundColor"
-            app:layout_constraintTop_toBottomOf="@id/user_title_layout"
+            app:layout_constraintTop_toBottomOf="@id/include_top_navigation"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:paddingVertical="25dp"
-            android:id="@+id/user_info_layout"
+            android:id="@+id/layout_user_info"
             android:minHeight="40dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+        <!--用户头像-->
         <ImageView
-                android:id="@+id/user_header_icon"
+                android:id="@+id/iv_user_avatar"
                 android:layout_width="@dimen/header_icon_size"
                 android:layout_height="@dimen/header_icon_size"
                 android:src="@mipmap/ic_launcher"
@@ -33,9 +36,10 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="20dp"/>
 
+        <!--用户信息-->
         <TextView
-                android:id="@+id/user_header_info"
-                app:layout_constraintLeft_toRightOf="@id/user_header_icon"
+                android:id="@+id/tv_user_info"
+                app:layout_constraintLeft_toRightOf="@id/iv_user_avatar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -44,9 +48,9 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
-
+        <!--更多图标-->
         <ImageView
-                android:id="@+id/list_menu_rta"
+                android:id="@+id/iv_rta"
                 android:layout_width="@dimen/icon_size"
                 android:layout_height="@dimen/icon_size"
                 android:layout_marginTop="8dp"
@@ -57,41 +61,41 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"/>
 
-
     </android.support.constraint.ConstraintLayout>
 
+    <!--网格菜单栏-->
     <android.support.constraint.ConstraintLayout
             android:background="@color/colorForegroundColor"
-            app:layout_constraintTop_toBottomOf="@id/user_info_layout"
+            app:layout_constraintTop_toBottomOf="@id/layout_user_info"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginTop="1dp"
-            android:id="@+id/grid_menu_layout"
+            android:id="@+id/layout_grid_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
         <android.support.v7.widget.RecyclerView
                 android:overScrollMode="never"
-                android:id="@+id/grid_menu_recycler_view"
+                android:id="@+id/rv_grid_menu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
     </android.support.constraint.ConstraintLayout>
 
+    <!--列表菜单栏-->
     <android.support.constraint.ConstraintLayout
             android:layout_marginTop="@dimen/default_margin_top"
             android:background="@color/colorForegroundColor"
-            app:layout_constraintTop_toBottomOf="@id/grid_menu_layout"
+            app:layout_constraintTop_toBottomOf="@id/layout_grid_menu"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/list_menu_layout"
+            android:id="@+id/layout_list_menu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
                 android:overScrollMode="never"
-                android:id="@+id/list_menu_recycler_view"
+                android:id="@+id/rv_list_menu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
