--- a/app/src/main/res/layout/wifi_info_layout.xml
+++ b/app/src/main/res/layout/wifi_info_layout.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/wifi_info_container"
+        android:id="@+id/layout_wifi_info"
         android:padding="3dp"
         android:layout_margin="3dp"
         android:layout_width="match_parent"
@@ -12,35 +12,35 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/wifi_info_ssid"
+            android:id="@+id/tv_ssid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     <TextView
-            app:layout_constraintTop_toBottomOf="@id/wifi_info_ssid"
+            app:layout_constraintTop_toBottomOf="@id/tv_ssid"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/wifi_info_bssid"
+            android:id="@+id/tv_bssid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     <TextView
-            app:layout_constraintTop_toBottomOf="@id/wifi_info_bssid"
+            app:layout_constraintTop_toBottomOf="@id/tv_bssid"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/wifi_info_level"
+            android:id="@+id/tv_level"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     <TextView
-            app:layout_constraintTop_toBottomOf="@id/wifi_info_level"
+            app:layout_constraintTop_toBottomOf="@id/tv_level"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/wifi_info_operatorFriendlyName"
+            android:id="@+id/tv_operatorFriendlyName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     <TextView
-            app:layout_constraintTop_toBottomOf="@id/wifi_info_operatorFriendlyName"
+            app:layout_constraintTop_toBottomOf="@id/tv_operatorFriendlyName"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/wifi_info_venueName"
+            android:id="@+id/tv_venueName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 </android.support.constraint.ConstraintLayout>
