--- a/app/src/main/res/layout/discovery_card_layout.xml
+++ b/app/src/main/res/layout/discovery_card_layout.xml
@@ -23,7 +23,7 @@
     <TextView
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:id="@+id/tv_title"
+            android:id="@+id/tv_nav_title"
             android:layout_gravity="left|top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
