--- a/app/src/main/res/layout/grid_menu_layout.xml
+++ b/app/src/main/res/layout/grid_menu_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content">
 
     <ImageView
-            android:id="@+id/iv_icon"
+            android:id="@+id/iv_grid_item_icon"
             android:layout_width="@dimen/icon_size"
             android:layout_height="@dimen/icon_size"
             app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +21,7 @@
             android:layout_marginStart="8dp"/>
 
     <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/tv_grid_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/iv_icon"
