--- a/app/src/main/res/layout/language_item_layout.xml
+++ b/app/src/main/res/layout/language_item_layout.xml
@@ -21,7 +21,7 @@
 
     <!--标题-->
     <TextView
-            android:id="@+id/tv_title"
+            android:id="@+id/tv_nav_title"
             app:layout_constraintLeft_toRightOf="@id/iv_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
