--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -4,17 +4,29 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@color/colorForegroundColor"
+        android:id="@+id/layout_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.fragment.TestFragment">
 
-    <TextView
+    <cn.jinelei.rainbow.ui.fragment.DrawView
+            android:id="@+id/dv_test"
+            android:background="@color/colorBlack"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_refresh"
+            android:src="@mipmap/ic_refresh"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="hello_blank_fragment"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="18dp"
+            android:layout_marginBottom="18dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
