--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -14,6 +14,12 @@
             android:background="@color/colorBlack"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:defaultRadius="15"
+            app:defaultLineHeight="80"
+            app:defaultLinkOffsetX="5"
+            app:defaultLinkOffsetY="80"
+            app:defaultStartX="80"
+            app:defaultStartY="80"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
