--- a/app/src/main/res/layout/activity_change_language.xml
+++ b/app/src/main/res/layout/activity_change_language.xml
@@ -6,7 +6,7 @@
         android:id="@+id/layout_change_language"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activity.ChangeLanguageActivity">
+        tools:context=".ui.more.ChangeLanguageActivity">
 
     <include layout="@layout/include_top_navigation"
              android:id="@+id/layout_top_navigation"/>
