--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -7,9 +7,20 @@
         android:id="@+id/layout_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragment.TestFragment">
+        tools:context=".ui.home.TestFragment">
 
-    <cn.jinelei.rainbow.ui.view.SleepChartView
+    <com.github.mikephil.charting.charts.BarChart
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/bar_chart"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
+
+    <cn.jinelei.rainbow.ui.base.components.SleepChartView
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/bar_chart"
             android:id="@+id/dv_test"
             android:background="@color/colorBlack"
             android:layout_width="match_parent"
@@ -19,19 +30,7 @@
             app:defaultLinkWidth="2"
             app:defaultLinkHeight="80"
             app:padding="20"
-            app:defaultTypeCount="3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-    <com.github.mikephil.charting.charts.BarChart
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dv_test"
-            android:id="@+id/bar_chart"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"/>
-
+            app:defaultTypeCount="3"/>
 
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_refresh"
