--- a/app/src/main/res/layout/more_fragment.xml
+++ b/app/src/main/res/layout/more_fragment.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content">
 
         <!--用户头像-->
-        <cn.jinelei.rainbow.ui.view.CircleImageView
+        <cn.jinelei.rainbow.ui.base.components.CircleImageView
                 android:id="@+id/iv_user_avatar"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
